Kubernetes-Manifests/rest-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-server-svc
  namespace: golang-amqp
spec:
  type: ClusterIP
  selector:
    app: rest-api-server
  ports:
  - name: rest-api-server
    port: 8000
    targetPort: 8000
