Kubernetes-Manifests/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: golang-amqp
spec:
  ingressClassName: nginx
  rules:
  - host: rabbitmq.golang-amqp.vbox-local-cluster.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: rabbitmq-svc
            port:
              number: 15672
